--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,12 @@ jobs:
       - name: Install dependencies
 
         run: npm install
+
+      - name: Run lint
+        run: npm run lint # Étape 5 : Vérification du code (lint) [cite: 38]
+
+      - name: Run tests
+        run: npm test # Étape 4 : Exécution des tests [cite: 37]
  
  
   docker:
